infrastructure/base/istio/templates/authorizationpolicies.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: l4-internal-gateway-policy
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            remoteIpBlocks:
              - 172.21.10.101/32
              - 172.21.10.102/32
      to:
        - operation:
            hosts:
              - monitoring.homelab.local
    - from:
        - source:
            remoteIpBlocks:
              - 172.21.10.1/24
      to:
        - operation:
            hosts:
              - authen.homelab.local
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
